--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Little Cindy🥰</title>
+    <title>Happy Cindy🥰</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         /* General styles */
@@ -289,24 +289,24 @@
             <div class="circle-image">
                 <img src="rendernet_image%20(20).jpeg" alt="Circle Image">
             </div>
-            <div class="circle-text"> Lil Cindy 😘</div>
+            <div class="circle-text"> Happy Cindy 😘</div>
             <div class="status-container">
                 <div class="status-dot"></div>
                 <div class="status-text">Online</div>
             </div>
-            <div class="additional-text">Hi thanks for visiting my page </div>
+            <div class="additional-text">Hi thank you for visiting my page! </div>
         </div>
         <!-- New section for date and call-to-action -->
         <div class="unique-info">
             <div class="call-to-action">
                 Send me a message, I'll be waiting for you💋
-                <div class="cta-detail">Let's talk here👇🏻👇🏻</div>
+                <div class="cta-detail">We can talk here🥰👇🏻👇🏻</div>
                 <div class="button-container">
-                    <a href="https://onlyfans.com/cutelittlecindy/c9" class="transparent-button">
+                    <a href="https://onlyfans.com/cutelittlecindy/c8" class="transparent-button">
                         <img src="images/OnlyFans-Symbol.png" alt="OnlyFans Symbol" class="button-icon">
                         <span class="button-text">OnlyFans VIP</span>
                     </a>
-                    <a href="https://onlyfans.com/cutelittlecindy/c9" class="transparent-button">
+                    <a href="https://onlyfans.com/cutelittlecindy/c8" class="transparent-button">
                         Click here for Free OnlyFans🥰 
                     </a>
                 </div>
