--- a/index.html
+++ b/index.html
@@ -314,11 +314,11 @@
                 Send me a message, I'll be waiting for you💋
                 <div class="cta-detail">We can talk here🥰👇🏻👇🏻</div>
                 <div class="button-container">
-                    <a href="https://onlyfans.com/action/trial/6yj4ukydedey9kvfgmwdqdeq3gv1gbf5" class="transparent-button">
+                    <a href="https://onlyfans.com/cutelittlecindy/c8" class="transparent-button">
                         <img src="images/OnlyFans-Symbol.png" alt="OnlyFans Symbol" class="button-icon">
                         <span class="button-text">OnlyFans VIP</span>
                     </a>
-                    <a href="https://onlyfans.com/action/trial/6yj4ukydedey9kvfgmwdqdeq3gv1gbf5" class="transparent-button">
+                    <a href="https://onlyfans.com/cutelittlecindy/c8" class="transparent-button">
                         Click here for Free OnlyFans🥰 
                     </a>
                 </div>
